--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Wildan Bisa Bikin QR Code</string>
+    <string name="text_to_qr_code_generator">Text to QR Code Generator</string>
+    <string name="save">Save</string>
+    <string name="generate">Generate</string>
 </resources>
