Create Fragment, adding softKeyboard hide function and adjustNoting when keyboard appears

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="text_to_qr_code_generator">Text to QR Code Generator</string>
     <string name="save">Save</string>
     <string name="generate">Generate</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
